crates/cinrs-core/tests/snapshots/codegen__a_wide_bit_field_reads_through_a_u128_window.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        struct Packed { unsigned __int128 wide : 70; int tail : 3; };\n\n        unsigned __int128 read_wide(struct Packed *p) { return p->wide; }\n        void write_wide(struct Packed *p, unsigned __int128 v) { p->wide = v; }\n        \")"
---
mod __cinrs_unit_faaff27e {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[repr(C, align(16))]
    #[derive(Copy, Clone)]
    pub struct Packed {
        pub __cinrs_bits0: [::core::primitive::u8; 10],
    }
    impl Packed {
        #[inline]
        pub fn wide(&self) -> ::core::primitive::u128 {
            let __cinrs_raw: ::core::primitive::u128 = (self.__cinrs_bits0[0]
                as ::core::primitive::u128)
                | ((self.__cinrs_bits0[1] as ::core::primitive::u128) << 8)
                | ((self.__cinrs_bits0[2] as ::core::primitive::u128) << 16)
                | ((self.__cinrs_bits0[3] as ::core::primitive::u128) << 24)
                | ((self.__cinrs_bits0[4] as ::core::primitive::u128) << 32)
                | ((self.__cinrs_bits0[5] as ::core::primitive::u128) << 40)
                | ((self.__cinrs_bits0[6] as ::core::primitive::u128) << 48)
                | ((self.__cinrs_bits0[7] as ::core::primitive::u128) << 56)
                | ((self.__cinrs_bits0[8] as ::core::primitive::u128) << 64);
            let __cinrs_value: ::core::primitive::u128 = __cinrs_raw
                & 0x3fffffffffffffffffu128;
            __cinrs_value as ::core::primitive::u128
        }
        #[inline]
        pub fn set_wide(&mut self, __cinrs_value: ::core::primitive::u128) {
            let __cinrs_bits: ::core::primitive::u128 = (__cinrs_value
                as ::core::primitive::u128) & 0x3fffffffffffffffffu128;
            let __cinrs_raw: ::core::primitive::u128 = (self.__cinrs_bits0[0]
                as ::core::primitive::u128)
                | ((self.__cinrs_bits0[1] as ::core::primitive::u128) << 8)
                | ((self.__cinrs_bits0[2] as ::core::primitive::u128) << 16)
                | ((self.__cinrs_bits0[3] as ::core::primitive::u128) << 24)
                | ((self.__cinrs_bits0[4] as ::core::primitive::u128) << 32)
                | ((self.__cinrs_bits0[5] as ::core::primitive::u128) << 40)
                | ((self.__cinrs_bits0[6] as ::core::primitive::u128) << 48)
                | ((self.__cinrs_bits0[7] as ::core::primitive::u128) << 56)
                | ((self.__cinrs_bits0[8] as ::core::primitive::u128) << 64);
            let __cinrs_raw: ::core::primitive::u128 = (__cinrs_raw
                & 0xffffffffffffffc00000000000000000u128) | __cinrs_bits;
            self.__cinrs_bits0[0] = __cinrs_raw as ::core::primitive::u8;
            self.__cinrs_bits0[1] = (__cinrs_raw >> 8) as ::core::primitive::u8;
            self.__cinrs_bits0[2] = (__cinrs_raw >> 16) as ::core::primitive::u8;
            self.__cinrs_bits0[3] = (__cinrs_raw >> 24) as ::core::primitive::u8;
            self.__cinrs_bits0[4] = (__cinrs_raw >> 32) as ::core::primitive::u8;
            self.__cinrs_bits0[5] = (__cinrs_raw >> 40) as ::core::primitive::u8;
            self.__cinrs_bits0[6] = (__cinrs_raw >> 48) as ::core::primitive::u8;
            self.__cinrs_bits0[7] = (__cinrs_raw >> 56) as ::core::primitive::u8;
            self.__cinrs_bits0[8] = (__cinrs_raw >> 64) as ::core::primitive::u8;
        }
        #[inline]
        pub fn tail(&self) -> ::core::ffi::c_int {
            let __cinrs_raw: ::core::primitive::u64 = (self.__cinrs_bits0[8]
                as ::core::primitive::u64)
                | ((self.__cinrs_bits0[9] as ::core::primitive::u64) << 8);
            let __cinrs_value: ::core::primitive::u64 = (__cinrs_raw >> 6) & 0x7;
            (((__cinrs_value << 61) as ::core::primitive::i64) >> 61)
                as ::core::ffi::c_int
        }
        #[inline]
        pub fn set_tail(&mut self, __cinrs_value: ::core::ffi::c_int) {
            let __cinrs_bits: ::core::primitive::u64 = ((__cinrs_value
                as ::core::primitive::u64) << 6) & 0x1c0;
            let __cinrs_raw: ::core::primitive::u64 = (self.__cinrs_bits0[8]
                as ::core::primitive::u64)
                | ((self.__cinrs_bits0[9] as ::core::primitive::u64) << 8);
            let __cinrs_raw: ::core::primitive::u64 = (__cinrs_raw & 0xfffffffffffffe3f)
                | __cinrs_bits;
            self.__cinrs_bits0[8] = __cinrs_raw as ::core::primitive::u8;
            self.__cinrs_bits0[9] = (__cinrs_raw >> 8) as ::core::primitive::u8;
        }
    }
    pub unsafe extern "C" fn read_wide(mut p: *mut Packed) -> ::core::primitive::u128 {
        unsafe {
            return (*p).wide();
        }
    }
    pub unsafe extern "C" fn write_wide(
        mut p: *mut Packed,
        mut v: ::core::primitive::u128,
    ) {
        unsafe {
            (*p).set_wide(v);
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_faaff27e::*;
