crates/cinrs-core/tests/snapshots/codegen__alignas_raises_the_alignment_of_the_record.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for(Standard::C11,\nr#\"\n        struct Aligned { _Alignas(16) int first; char rest; };\n        unsigned long size(void) { return sizeof(struct Aligned); }\n        \"#)"
---
mod __cinrs_unit_e04320b8 {
    const _: () = { /* the data-model check */ };
    #[allow(…)]
    #[repr(C, align(16))]
    #[derive(Copy, Clone)]
    pub struct Aligned {
        pub first: ::core::ffi::c_int,
        pub rest: ::core::ffi::c_char,
    }
    #[allow(…)]
    pub unsafe extern "C" fn size() -> ::core::ffi::c_ulong {
        unsafe {
            return 16;
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_e04320b8::*;
