crates/cinrs-core/tests/snapshots/codegen__always_inline_with_a_target_feature_is_plain_inline.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for_target(Standard::C99, \"x86_64-unknown-linux-gnu\",\nr#\"\n        __attribute__((always_inline, target(\"avx2\"))) static inline int own(int n) {\n            return n + 1;\n        }\n\n        __attribute__((always_inline)) static inline int plain(int n) { return n + 2; }\n\n        #pragma GCC push_options\n        #pragma GCC target(\"avx2\")\n        static inline __attribute__((always_inline)) int region(int n) { return n + 3; }\n\n        int call(int n) { return own(n) + region(n); }\n        #pragma GCC pop_options\n\n        int call_plain(int n) { return plain(n); }\n        \"#)"
---
mod __cinrs_unit_62ad287a {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[inline]
    #[target_feature(enable = "avx2")]
    unsafe extern "C" fn own(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            return n.wrapping_add(1);
        }
    }
    #[inline(always)]
    unsafe extern "C" fn plain(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            return n.wrapping_add(2);
        }
    }
    #[inline]
    #[target_feature(enable = "avx2")]
    unsafe extern "C" fn region(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            return n.wrapping_add(3);
        }
    }
    #[target_feature(enable = "avx2")]
    pub unsafe extern "C" fn call(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            return own(n).wrapping_add(region(n));
        }
    }
    pub unsafe extern "C" fn call_plain(
        mut n: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int {
        unsafe {
            return plain(n);
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_62ad287a::*;
